--- a/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/Themes/Generic.xaml
+++ b/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/Themes/Generic.xaml
@@ -1,7 +1,7 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="using:BingoWallpaper.Uwp"
-                    xmlns:controls="using:BingoWallpaper.Uwp.Controls">
+                    xmlns:controls="using:BingoWallpaper.Uwp.Controls"
+                    xmlns:local="using:BingoWallpaper.Uwp">
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="ms-appx:///Themes/ImageEx.xaml" />
     </ResourceDictionary.MergedDictionaries>
