--- a/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/Views/AboutView.xaml
+++ b/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/Views/AboutView.xaml
@@ -2,10 +2,11 @@
                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                 xmlns:local="using:BingoWallpaper.Uwp.Views"
-                mc:Ignorable="d"
-                DataContext="{Binding Source={StaticResource Locator},Path=About}">
+                xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                DataContext="{Binding Source={StaticResource Locator},
+                                      Path=About}"
+                mc:Ignorable="d">
     <Page.Transitions>
         <TransitionCollection>
             <EdgeUIThemeTransition Edge="Right" />
@@ -14,7 +15,7 @@
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Border Width="20"
                 Height="36"
-                CornerRadius="18,0,0,18"
-                Background="Red"></Border>
+                Background="Red"
+                CornerRadius="18,0,0,18" />
     </Grid>
 </local:ViewBase>
