--- a/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/Views/DetailView.xaml
+++ b/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/Views/DetailView.xaml
@@ -2,11 +2,12 @@
                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                 xmlns:local="using:BingoWallpaper.Uwp.Views"
+                xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                 xmlns:uwp="using:FontAwesome.UWP"
-                mc:Ignorable="d"
-                DataContext="{Binding Source={StaticResource Locator},Path=Detail}">
+                DataContext="{Binding Source={StaticResource Locator},
+                                      Path=Detail}"
+                mc:Ignorable="d">
     <Page.Transitions>
         <TransitionCollection>
             <NavigationThemeTransition>
@@ -31,11 +32,11 @@
                 </AppBarButton.Icon>
             </AppBarButton>
             <AppBarButton x:Uid="/Detail/SetWallpaper"
-                          Command="{x:Bind ViewModel.SetWallpaperCommand}"></AppBarButton>
+                          Command="{x:Bind ViewModel.SetWallpaperCommand}" />
             <AppBarButton x:Uid="/Detail/SetLockScreen"
-                          Command="{x:Bind ViewModel.SetLockScreenCommand}"></AppBarButton>
-            <AppBarButton x:Uid="/Detail/Share"></AppBarButton>
+                          Command="{x:Bind ViewModel.SetLockScreenCommand}" />
+            <AppBarButton x:Uid="/Detail/Share" />
         </CommandBar>
     </Page.BottomAppBar>
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"></Grid>
+    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" />
 </local:ViewBase>
