--- a/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/Views/MainView.xaml
+++ b/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/Views/MainView.xaml
@@ -1,18 +1,19 @@
 ﻿<Page x:Class="BingoWallpaper.Uwp.Views.MainView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:bingoWallpaper="using:BingoWallpaper"
+      xmlns:controls="using:BingoWallpaper.Uwp.Controls"
       xmlns:converters="using:BingoWallpaper.Uwp.Converters"
+      xmlns:core="using:Microsoft.Xaml.Interactions.Core"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:fa="using:FontAwesome.UWP"
       xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
-      xmlns:core="using:Microsoft.Xaml.Interactions.Core"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:media="using:Microsoft.Xaml.Interactions.Media"
-      xmlns:controls="using:BingoWallpaper.Uwp.Controls"
       xmlns:models="using:BingoWallpaper.Models"
-      xmlns:bingoWallpaper="using:BingoWallpaper"
-      mc:Ignorable="d"
-      DataContext="{Binding Source={StaticResource Locator},Path=Main}">
+      DataContext="{Binding Source={StaticResource Locator},
+                            Path=Main}"
+      mc:Ignorable="d">
     <Page.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -24,8 +25,8 @@
     </Page.Resources>
     <Page.BottomAppBar>
         <AppBar x:Name="AppBar"
-                ClosedDisplayMode="Compact"
-                Background="{ThemeResource SystemAccentBrush}">
+                Background="{ThemeResource SystemAccentBrush}"
+                ClosedDisplayMode="Compact">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
@@ -33,11 +34,11 @@
                     <ColumnDefinition Width="Auto" />
                     <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
-                <StackPanel Grid.Column="0"></StackPanel>
-                <AppBarButton Grid.Column="1"
-                              x:Uid="/Main/Refresh"
-                              IsCompact="{x:Bind AppBar.IsOpen,Converter={StaticResource BooleanInverseConverter},Mode=OneWay}"
-                              Command="{x:Bind ViewModel.RefreshCommand}">
+                <StackPanel Grid.Column="0" />
+                <AppBarButton x:Uid="/Main/Refresh"
+                              Grid.Column="1"
+                              Command="{x:Bind ViewModel.RefreshCommand}"
+                              IsCompact="{x:Bind AppBar.IsOpen, Converter={StaticResource BooleanInverseConverter}, Mode=OneWay}">
                     <AppBarButton.Icon>
                         <PathIcon HorizontalAlignment="Center"
                                   VerticalAlignment="Center"
@@ -51,19 +52,19 @@
                     <interactivity:Interaction.Behaviors>
                         <core:DataTriggerBehavior Binding="{Binding Path=IsBusy}"
                                                   Value="True">
-                            <core:CallMethodAction TargetObject="{x:Bind _timer}"
-                                                   MethodName="Start" />
+                            <core:CallMethodAction MethodName="Start"
+                                                   TargetObject="{x:Bind _timer}" />
                         </core:DataTriggerBehavior>
                         <core:DataTriggerBehavior Binding="{Binding Path=IsBusy}"
                                                   Value="False">
-                            <core:CallMethodAction TargetObject="{x:Bind _timer}"
-                                                   MethodName="Stop" />
+                            <core:CallMethodAction MethodName="Stop"
+                                                   TargetObject="{x:Bind _timer}" />
                         </core:DataTriggerBehavior>
                     </interactivity:Interaction.Behaviors>
                 </AppBarButton>
-                <AppBarButton Grid.Column="2"
-                              x:Uid="/Main/Setting"
-                              IsCompact="{x:Bind AppBar.IsOpen,Converter={StaticResource BooleanInverseConverter},Mode=OneWay}">
+                <AppBarButton x:Uid="/Main/Setting"
+                              Grid.Column="2"
+                              IsCompact="{x:Bind AppBar.IsOpen, Converter={StaticResource BooleanInverseConverter}, Mode=OneWay}">
                     <AppBarButton.Icon>
                         <PathIcon HorizontalAlignment="Center"
                                   VerticalAlignment="Center"
@@ -75,9 +76,9 @@
                         </core:EventTriggerBehavior>
                     </interactivity:Interaction.Behaviors>
                 </AppBarButton>
-                <AppBarButton Grid.Column="3"
-                              x:Uid="/Main/About"
-                              IsCompact="{x:Bind AppBar.IsOpen,Converter={StaticResource BooleanInverseConverter},Mode=OneWay}">
+                <AppBarButton x:Uid="/Main/About"
+                              Grid.Column="3"
+                              IsCompact="{x:Bind AppBar.IsOpen, Converter={StaticResource BooleanInverseConverter}, Mode=OneWay}">
                     <AppBarButton.Icon>
                         <FontIcon FontFamily="Segoe MDL2 Assets"
                                   Glyph="&#xE946;" />
@@ -95,9 +96,11 @@
         <VisualStateGroup></VisualStateGroup>
     </VisualStateManager.VisualStateGroups>-->
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <FlipView Style="{StaticResource BingoWallpaperFlipViewStyle}"
-                  ItemsSource="{Binding Path=WallpaperCollections,Mode=OneTime}"
-                  SelectedItem="{Binding Path=SelectedWallpaperCollection,Mode=TwoWay}">
+        <FlipView ItemsSource="{Binding Path=WallpaperCollections,
+                                        Mode=OneTime}"
+                  SelectedItem="{Binding Path=SelectedWallpaperCollection,
+                                         Mode=TwoWay}"
+                  Style="{StaticResource BingoWallpaperFlipViewStyle}">
             <FlipView.ItemTemplate>
                 <DataTemplate x:DataType="models:WallpaperCollection">
                     <Grid>
@@ -108,13 +111,13 @@
                             <TextBlock Text="{x:Bind Month}" />
                         </StackPanel>
                         <!--#region 背景图片-->
-                        <Image Source="{Binding}"
-                               Opacity="0.5"></Image>
+                        <Image Opacity="0.5"
+                               Source="{Binding}" />
                         <!--#endregion-->
                         <GridView ItemsSource="{x:Bind}">
                             <GridView.ItemTemplate>
                                 <DataTemplate x:DataType="models:Wallpaper">
-                                    <TextBlock Text="{x:Bind}"></TextBlock>
+                                    <TextBlock Text="{x:Bind}" />
                                 </DataTemplate>
                             </GridView.ItemTemplate>
                         </GridView>
