--- a/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/Views/SettingView.xaml
+++ b/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/Views/SettingView.xaml
@@ -1,14 +1,15 @@
 ﻿<local:ViewBase x:Class="BingoWallpaper.Uwp.Views.SettingView"
                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                xmlns:local="using:BingoWallpaper.Uwp.Views"
-                xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                xmlns:system="using:System"
                 xmlns:converters="using:BingoWallpaper.Uwp.Converters"
+                xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                xmlns:local="using:BingoWallpaper.Uwp.Views"
+                xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                 xmlns:models="using:BingoWallpaper.Models"
-                mc:Ignorable="d"
-                DataContext="{Binding Source={StaticResource Locator},Path=Setting}">
+                xmlns:system="using:System"
+                DataContext="{Binding Source={StaticResource Locator},
+                                      Path=Setting}"
+                mc:Ignorable="d">
     <Page.Resources>
         <converters:EnumToStringConverter x:Key="EnumToStringConverter" />
         <converters:StringFormatConverter x:Key="StringFormatConverter" />
@@ -23,8 +24,10 @@
             <StackPanel Orientation="Vertical">
                 <ComboBox x:Uid="/Setting/SaveLocation"
                           Margin="10,10,10,0"
-                          ItemsSource="{Binding Path=SaveLocations,Mode=OneTime}"
-                          SelectedItem="{Binding Path=SelectedSaveLocation,Mode=TwoWay}">
+                          ItemsSource="{Binding Path=SaveLocations,
+                                                Mode=OneTime}"
+                          SelectedItem="{Binding Path=SelectedSaveLocation,
+                                                 Mode=TwoWay}">
                     <ComboBox.ItemTemplate>
                         <DataTemplate x:DataType="models:SaveLocation">
                             <TextBlock Text="{Binding Converter={StaticResource EnumToStringConverter}}" />
@@ -32,21 +35,22 @@
                     </ComboBox.ItemTemplate>
                 </ComboBox>
                 <ComboBox x:Uid="/Setting/WallpaperSize"
-                          Margin="10,10,10,0"></ComboBox>
+                          Margin="10,10,10,0" />
                 <ComboBox x:Uid="/Setting/Area"
                           Margin="10,10,10,0"
                           ItemsSource="{x:Bind ViewModel.Areas}"
-                          SelectedItem="{x:Bind ViewModel.SelectedArea,Mode=TwoWay}">
+                          SelectedItem="{x:Bind ViewModel.SelectedArea, Mode=TwoWay}">
                     <ComboBox.ItemTemplate>
                         <DataTemplate x:DataType="system:String">
                             <RelativePanel>
                                 <Image x:Name="FlagImage"
                                        RelativePanel.AlignLeftWithPanel="True"
                                        RelativePanel.AlignVerticalCenterWithPanel="True"
-                                       Source="{Binding Converter={StaticResource StringFormatConverter},ConverterParameter='ms-appx:///Assets/Images/flags/{0}.png'}" />
-                                <TextBlock RelativePanel.RightOf="FlagImage"
+                                       Source="{Binding Converter={StaticResource StringFormatConverter},
+                                                        ConverterParameter='ms-appx:///Assets/Images/flags/{0}.png'}" />
+                                <TextBlock Margin="5,0,0,0"
                                            RelativePanel.AlignVerticalCenterWith="FlagImage"
-                                           Margin="5,0,0,0"
+                                           RelativePanel.RightOf="FlagImage"
                                            Text="{Binding}" />
                             </RelativePanel>
                         </DataTemplate>
