--- a/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/Views/MainView.xaml
+++ b/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/Views/MainView.xaml
@@ -11,6 +11,7 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:media="using:Microsoft.Xaml.Interactions.Media"
       xmlns:models="using:BingoWallpaper.Models"
+      xmlns:foundation="using:Windows.Foundation"
       DataContext="{Binding Source={StaticResource Locator},
                             Path=Main}"
       mc:Ignorable="d">
@@ -21,6 +22,7 @@
             </ResourceDictionary.MergedDictionaries>
             <converters:BooleanInverseConverter x:Key="BooleanInverseConverter" />
             <converters:StringFormatConverter x:Key="StringFormatConverter" />
+            <converters:WallpaperUrlConverter x:Key="WallpaperUrlConverter" />
         </ResourceDictionary>
     </Page.Resources>
     <Page.BottomAppBar>
@@ -112,7 +114,7 @@
                         </StackPanel>
                         <!--#region 背景图片-->
                         <Image Opacity="0.5"
-                               Source="{Binding}" />
+                               Source="{Binding Path=[0],Converter={StaticResource WallpaperUrlConverter},ConverterParameter='1920,1080'}"></Image>
                         <!--#endregion-->
                         <GridView ItemsSource="{x:Bind}">
                             <GridView.ItemTemplate>
