--- a/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/Views/MainView.xaml
+++ b/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/Views/MainView.xaml
@@ -112,8 +112,8 @@
                             <TextBlock Text="{x:Bind Month}" />
                         </StackPanel>
                         <!--#region 背景图片-->
-                        <Image Opacity="0.5"
-                               Source="{Binding Path=[0], Converter={StaticResource WallpaperUrlConverter}, ConverterParameter='1920,1080'}" />
+                        <controls:ImageEx Opacity="0.5"
+                                          Source="{Binding Path=[0], Converter={StaticResource WallpaperUrlConverter}, ConverterParameter='1920,1080'}" />
                         <!--#endregion-->
                         <GridView ItemsSource="{x:Bind}">
                             <GridView.ItemTemplate>
@@ -121,15 +121,13 @@
                                     <TextBlock Text="{x:Bind}" />
                                 </DataTemplate>
                             </GridView.ItemTemplate>
+                            <!--<interactivity:Interaction.Behaviors>
+                                <core:EventTriggerBehavior EventName="ItemClick">
+                                    <core:InvokeCommandAction Command="{Binding}"></core:InvokeCommandAction>
+                                </core:EventTriggerBehavior>
+                            </interactivity:Interaction.Behaviors>-->
                         </GridView>
                     </Grid>
-                    <!--<GridView>
-                        <GridView.ItemsPanel>
-                            <ItemsPanelTemplate>
-                                <StackPanel></StackPanel>
-                            </ItemsPanelTemplate>
-                        </GridView.ItemsPanel>
-                    </GridView>-->
                 </DataTemplate>
             </FlipView.ItemTemplate>
         </FlipView>
