--- a/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/Views/SettingView.xaml
+++ b/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/Views/SettingView.xaml
@@ -37,7 +37,8 @@
                 <ComboBox x:Uid="/Setting/WallpaperSize"
                           Margin="10,10,10,0"
                           ItemsSource="{Binding Path=WallpaperSizes}"
-                          SelectedItem="{Binding Path=SelectedWallpaperSize,Mode=TwoWay}" />
+                          SelectedItem="{Binding Path=SelectedWallpaperSize,
+                                                 Mode=TwoWay}" />
                 <ComboBox x:Uid="/Setting/Area"
                           Margin="10,10,10,0"
                           ItemsSource="{x:Bind ViewModel.Areas}"
@@ -46,11 +47,11 @@
                         <DataTemplate x:DataType="system:String">
                             <RelativePanel>
                                 <Image x:Name="FlagImage"
+                                       Height="25"
                                        RelativePanel.AlignLeftWithPanel="True"
                                        RelativePanel.AlignVerticalCenterWithPanel="True"
                                        Source="{Binding Converter={StaticResource StringFormatConverter},
-                                                        ConverterParameter='ms-appx:///Assets/Images/flags/{0}.png'}"
-                                       Stretch="None" />
+                                                        ConverterParameter='ms-appx:///Assets/Images/flags/{0}.png'}" />
                                 <TextBlock Margin="5,0,0,0"
                                            RelativePanel.AlignVerticalCenterWith="FlagImage"
                                            RelativePanel.RightOf="FlagImage"
