--- a/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/Views/AboutView.xaml
+++ b/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/Views/AboutView.xaml
@@ -12,5 +12,5 @@
             <EdgeUIThemeTransition Edge="Right" />
         </TransitionCollection>
     </Page.Transitions>
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"></Grid>
+    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" />
 </local:ViewBase>
