--- a/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/Views/MainView.xaml
+++ b/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/Views/MainView.xaml
@@ -115,9 +115,9 @@
                         <controls:ImageEx Opacity="0.5"
                                           Source="{Binding Path=[0], Converter={StaticResource WallpaperUrlConverter}, ConverterParameter='1920,1080'}" />
                         <!--#endregion-->
-                        <GridView ItemsSource="{x:Bind}"
-                                  SelectionMode="None"
-                                  IsItemClickEnabled="True">
+                        <GridView IsItemClickEnabled="True"
+                                  ItemsSource="{x:Bind}"
+                                  SelectionMode="None">
                             <GridView.ItemTemplate>
                                 <DataTemplate x:DataType="models:Wallpaper">
                                     <TextBlock Text="{x:Bind}" />
@@ -125,7 +125,7 @@
                             </GridView.ItemTemplate>
                             <interactivity:Interaction.Behaviors>
                                 <core:EventTriggerBehavior EventName="ItemClick">
-                                    <core:InvokeCommandAction Command="{Binding Source={StaticResource Locator},Path=Main.ClickCommand}" />
+                                    <core:InvokeCommandAction Command="{Binding Source={StaticResource Locator}, Path=Main.ClickCommand}" />
                                 </core:EventTriggerBehavior>
                             </interactivity:Interaction.Behaviors>
                         </GridView>
