--- a/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/Views/MainView.xaml
+++ b/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/Views/MainView.xaml
@@ -113,14 +113,18 @@
                         </StackPanel>
                         <!--#region 背景图片-->
                         <controls:ImageEx Opacity="0.5"
-                                          Source="{Binding Path=[0], Converter={StaticResource WallpaperUrlConverter}, ConverterParameter='1920,1080'}" />
+                                          Stretch="UniformToFill"
+                                          Source="{Binding Path=[0], Converter={StaticResource WallpaperUrlConverter}, ConverterParameter='1920x1080'}" />
                         <!--#endregion-->
                         <GridView IsItemClickEnabled="True"
                                   ItemsSource="{x:Bind}"
                                   SelectionMode="None">
                             <GridView.ItemTemplate>
                                 <DataTemplate x:DataType="leanCloud:Wallpaper">
-                                    <TextBlock Text="{x:Bind}" />
+                                    <controls:WallpaperItem Width="160"
+                                                            Height="96"
+                                                            Text="{x:Bind Archive.Info}"
+                                                            Url="{x:Bind Image,Converter={StaticResource WallpaperUrlConverter},ConverterParameter='1920x1080'}" />
                                 </DataTemplate>
                             </GridView.ItemTemplate>
                             <interactivity:Interaction.Behaviors>
