--- a/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/Themes/Generic.xaml
+++ b/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/Themes/Generic.xaml
@@ -1,8 +1,7 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:controls="using:BingoWallpaper.Uwp.Controls"
-                    xmlns:local="using:BingoWallpaper.Uwp">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="/Themes/ImageEx.xaml" />
+        <ResourceDictionary Source="/Themes/WallpaperItem.xaml" />
     </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
